# CapsX

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: requirements.md  technical-design.md
res/: app.rc  gen_icon.py
src/: main.cpp
src/core/: binding_manager.cpp  binding_manager.h  input_simulator.cpp  input_simulator.h  interception_hook.cpp  interception_hook.h  keyboard_hook.cpp  keyboard_hook.h  single_instance.cpp  single_instance.h  state_machine.cpp  state_machine.h
src/ui/: tray_icon.cpp  tray_icon.h  tray_icon_drawer.cpp  tray_icon_drawer.h
src/utils/: logger.cpp  logger.h  string_utils.cpp  string_utils.h
